--- a/webview/ui/formatSwitch.css
+++ b/webview/ui/formatSwitch.css
@@ -8,7 +8,7 @@
 }
 
 .lfs-label {
-    font-size: 11px;
+    font-size: 12px;
     color: var(--vscode-descriptionForeground);
 
     &::after {
@@ -23,7 +23,7 @@
     border: 1px solid var(--vscode-dropdown-border);
     border-radius: 4px;
     font-family: inherit;
-    font-size: 11px;
+    font-size: 12px;
     line-height: 1;
     height: 24px;
     padding: 0 4px;
